@@ -4,6 +4,8 @@ MINOR FEATURES AND BUG FIXES
 * procspec() fixed error when attempting to smooth rspec object without column names
 * procspec(), aggplot() accept additional arguments to summary functions (e.g., na.rm=TRUE)
 * peakshape() default wavelength limits (lim) now taken from rspec object rather than 300-700
+* peakshape() returns warning if a spectrum contains duplicate reflectance values
+* summary.rspec() works with single spectra
 
 pavo 0.5-1
 ------------------------------------------------------------------------------
